# Compiler

./: CMakeLists.txt
App/: CMakeLists.txt
App/Include/: AsmGenerator.h  IRGenerator.h  IRTypes.h  analyzer.h  arena.h  ast.h  lexer.h  parser.h  tokenParser.h  tokenTypes.h  vector.h
App/src/: AsmGenerator.c  IRGenerator.c  IRTypes.c  analyzer.c  arena.c  ast.c  lexer.c  main.c  tokenParser.c  tokenTypes.c  vector.c
